--- a/config/vgg_transformer.yml
+++ b/config/vgg_transformer.yml
@@ -1,17 +1,16 @@
 vocab: aAàÀảẢãÃáÁạẠăĂằẰẳẲẵẴắẮặẶâÂầẦẩẨẫẪấẤậẬbBcCdDđĐeEèÈẻẺẽẼéÉẹẸêÊềỀểỂễỄếẾệỆfFgGhHiIìÌỉỈĩĨíÍịỊjJkKlLmMnNoOòÒỏỎõÕóÓọỌôÔồỒổỔỗỖốỐộỘơƠờỜởỞỡỠớỚợỢpPqQrRsStTuUùÙủỦũŨúÚụỤưƯừỪửỬữỮứỨựỰvVwWxXyYỳỲỷỶỹỸýÝỵỴzZ0123456789!"#$%&\'()*+,-./:;<=>?@[\\]^_`{|}~°
 
-device: cuda:3
+device: cuda
 
-dataset:    
+dataset: 
     name: VinText
     data_root: ./data/VinText
     train_annotation: train_labels.txt
     valid_annotation: val_labels.txt
     image_height: 32
     image_min_width: 32
-    image_max_width: 512
+    image_max_width: 128 #512
 
-seq_modeling: transformer
 transformer:  
     d_model: 256
     nhead: 8
@@ -44,8 +43,6 @@ aug:
     masked_language_model: true
 
 quiet: False 
-
-backbone: vgg19_bn
 cnn:
     ss:
         - [2, 2]
